# rdd

./: Cargo.toml
src/: cli.rs  config.rs  error.rs  main.rs
src/core/: copy.rs  mod.rs
src/utils/: mod.rs
